--- a/app/src/main/res/layout/activity_trabalho.xml
+++ b/app/src/main/res/layout/activity_trabalho.xml
@@ -147,6 +147,7 @@
                 android:layout_gravity="bottom"
                 android:layout_margin="6dp"
                 android:layout_weight="1"
+                android:onClick="cliqueSave"
                 android:background="#CCCCCC"
                 android:text="Save" />
 
