--- a/app/src/main/res/layout/listagem2.xml
+++ b/app/src/main/res/layout/listagem2.xml
@@ -7,11 +7,40 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-
+        android:orientation="vertical">
         <TextView
             android:id="@+id/tvNome"
             android:layout_width="match_parent"
+            android:layout_marginRight="10dp"
+            android:textSize="20dp"
             android:layout_height="wrap_content" />
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvR"
+                    android:layout_width="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:textSize="20dp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tvG"
+                    android:layout_width="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:textSize="20dp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tvB"
+                    android:layout_width="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:textSize="20dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
     </LinearLayout>
 </LinearLayout>
